fix(board): spacing error in chrome 56 (#1183)
* fix(styling): using margin when gap is not supported by browser

* fix(styling): changed one of the duplicate classnames

* fix(styling): added minimum height to table header

* fix(board): CSS restructuring

--- a/next-tavla/src/Board/scenarios/Board/styles.module.css
+++ b/next-tavla/src/Board/scenarios/Board/styles.module.css
@@ -18,4 +18,7 @@
     .board {
         display: flex;
     }
+    .board > * {
+        margin: 10px;
+    }
 }
