--- a/next-tavla/src/Board/scenarios/Table/components/TableHeader/styles.module.css
+++ b/next-tavla/src/Board/scenarios/Table/components/TableHeader/styles.module.css
@@ -1,6 +1,7 @@
-.headerWrapper {
+.tableHeaderWrapper {
     display: flex;
     align-items: center;
+    min-height: 2em;
 }
 
 .heading {
