--- a/next-tavla/src/Shared/styles/pages/board.module.css
+++ b/next-tavla/src/Shared/styles/pages/board.module.css
@@ -17,3 +17,9 @@
     overflow: hidden;
     padding: 1em 0;
 }
+
+@supports not (gap: 0.75em) {
+    .rootContainer > * {
+        margin: 0.75em;
+    }
+}
